Bug 1627164 - Fix edit/delete buttons in about:logins break into lines r=MattN
In CJK locales, line break could happen in any letter of the button. The fix here is to explicitly specify flex property so that the button couldn't grow or shrink.

Differential Revision: https://phabricator.services.mozilla.com/D79823

UltraBlame original commit: df828f4d46970fe3535dae1a6ccaf40d121f75a8

--- a/browser/components/aboutlogins/content/components/login-item.css
+++ b/browser/components/aboutlogins/content/components/login-item.css
@@ -118,6 +118,8 @@ input[type="url"]:read-only {
   -moz-context-properties: fill;
   fill: currentColor;
   min-width: auto;
+  
+  flex: 0 0 auto;
 }
 
 .delete-button:dir(rtl),
